feat (finalize implementation)