@@ -5,7 +5,7 @@ plugins {
 }
 
 
-group = "fr.bibonne"
+group = "bibonne.exp"
 
 version = "0.0.1-SNAPSHOT"
 
@@ -19,6 +19,22 @@ configurations {
     }
 }
 
+
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
+}
+
+
+
 repositories {
     mavenCentral()
     mavenLocal()
@@ -28,7 +44,9 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("bibonne.exp.oas-cache:metadata-modelapi:0.0.1-SNAPSHOT")
-    implementation("bibonne.exp.oas-cache:metadata-modelapi:0.0.1-SNAPSHOT")
+    implementation("bibonne.exp.oas-cache:metadata-interfaceapi:0.0.1-SNAPSHOT")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-csv")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     annotationProcessor("org.projectlombok:lombok")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
